examples/test/testpolicy7711.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7711
  namespace: namespace185
spec:
  podSelector:
    matchLabels:
      key26: value27
      key39: value29
      key42: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value46
      podSelector:
        matchLabels:
          key17: value37
          key43: value13
          key29: value24
